[gd_scene load_steps=3 format=3 uid="uid://dn8ffsl7hw5gn"]

[ext_resource type="Script" uid="uid://bka02dafhctjs" path="res://scripts/LinksScreen.gd" id="1_3ki3s"]

[sub_resource type="LabelSettings" id="LabelSettings_3ki3s"]
font_size = 35

[node name="LinksScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_3ki3s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.241477, 0.379928, 0.877304, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Currículo de Honras - Thiago Yure"
label_settings = SubResource("LabelSettings_3ki3s")

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Currículo em PDF"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Linkedin"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Github"

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Behance"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
text = "Finalizar jogo ->"

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
text = "Fonte: https://www.pixelsagas.com/
Audio: -
	BGM: Kevin MacLeod - 8bit Dungeon Level ♫ NO COPYRIGHT 8-bit Music
	SFX: - creatorassets.com
Sprites: -
	PIPOYA FREE RPG Character Sprites 32x32
	Dungeon/Temple tileset by AppleDog
	Dungeon Tiles by Rostislav Gnatovsky ( Cardinal Zebra )"
fit_content = true
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/Button" to="." method="_on_button_sair_pressed"]
